Добавил запрос на получение списка, добавил фильтрацию, добавил адаптив

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,14 +23,8 @@
     "baseUrl": "src",
     "paths": {
       "assets/*": ["assets/*"],
+      "apollo": ["apollo/index.ts"],
       "core/*": ["core/*"],
-      "constants": ["constants/index.ts"],
-      "helpers/*": ["helpers/*"],
-      "hooks/*": ["hooks/*"],
-      "modules/*": ["modules/*"],
-      "repositories/*": ["repositories/*"],
-      "shared/*": ["shared/*"],
-      "types": ["types/index.ts"],
       "styles/*": ["styles/*"],
     },
   },
